cha-pre-live-flux2/cha-eks-5a/namespaces/pricing-systest/network-policy-apps.yaml
####################################################
## Allow ingress from pricing-systest and icis-ingress ##

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-pricing-systest
  namespace: pricing-systest
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: pricing-systest
    - namespaceSelector:
        matchLabels:
          name: icis-ingress

#################################
## Allow egress from pricing-systest ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-pricing-systest
  namespace: pricing-systest
spec:
  podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: pricing-systest

#########################################
## Allow external http traffic egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-http-external
  namespace: pricing-systest
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP

#########################################
## Allow SQL & IDDN egress  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-sql-server
  namespace: pricing-systest
spec:
  podSelector: {}
  egress:
  - ports:
    - port: 1433
      protocol: TCP
    - port: 9000
      protocol: TCP

##################################################
## ICIS monitoring ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-icis-monitoring
  namespace: pricing-systest
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
      namespaceSelector:
        matchLabels:
          name: icis-monitoring

#################################################
## Allow traffic to mongo db atlas peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-mongodb
  namespace: pricing-systest
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.248.0/21
    ports:
    - port: 27015
      protocol: TCP
    - port: 27016
      protocol: TCP
    - port: 27017
      protocol: TCP
    - port: 27015
      protocol: UDP
    - port: 27016
      protocol: UDP
    - port: 27017
      protocol: UDP

##################################################
## allow access to kube2iam to assume iam roles ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-iam-access
  namespace: pricing-systest
spec:
  podSelector:
    matchLabels:
      require-iam-access: "true"
  egress:
  - to:
    - ipBlock:
        cidr: 10.52.160.0/24
    ports:
    - port: 8181
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 10.52.161.0/24
    ports:
    - port: 8181
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 10.52.162.0/24
    ports:
    - port: 8181
      protocol: TCP

##################################################
## Allow traffic to confluent cloud peered vpc  ##

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-egress-confluent
  namespace: pricing-systest
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 172.16.0.0/16
    ports:
    - port: 443
      protocol: TCP
    - port: 9092
      protocol: TCP
